--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
 .App {
-  text-align: center;
+  font-family: Gotham Narrow SSm A,Gotham Narrow SSm B,Rubik,Lato,Lucida Grande,Lucida Sans Unicode,Tahoma,Sans-Serif;
+  background: linear-gradient(130deg,#ff7a18,#af002d 41.07%,#319197 76.05%);
+  color: white;
+  max-width: 50vw;
+  min-height: 300px;
+  border-radius: 8px;
+  margin: 32px auto;
+  padding: 36px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.heading{
+  text-shadow: 0 3px 3px rgb(0 0 0 / 50%);
+  width: 35vw;
+  text-align: left;
+  background-color: rgb(40, 44, 52, .53);
+  padding: 4px 16px;
+  border-radius: 8px;
+  margin: auto;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn{
+  height: 32px;
+  width: 32px;
+  font-size: 18px;
+  font-weight: 600;
+  margin: auto 0px;
+  border-radius: 50%;
+  background-color: rgb(0,0,0, .53);
+  color: whitesmoke;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.task-item{
+  background-color: rgb(40, 44, 52, .23);
+  padding: 8px 32px;
+  margin: 8px 16px;
+  border-radius: 8px;
+}
+
+.task-title{
+  margin-block-end: 0;
+  margin-bottom: 4px;
+  padding: 2px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.task-date{
+  margin-block-start: 0;
+  padding-left: 2px;
+}
+
+.add-task{
   display: flex;
   flex-direction: column;
+  /* justify-content: center; */
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 8px;
+  border-width: 4px;;
+  border-color: rgb(40, 44, 52, .53);;
+}
+
+.form-item{
+  padding: 8px;
+}
+
+label{
+  font-size: 10px;
+  margin: 8px;
+  margin-bottom: 0;
+}
+input{
+  width: 240px;
+  border-radius: 4px;
+  border:none;
+  margin: 8px;
+  margin-top:4px;
+  padding: 4px 8px;
+  font-size: 12px;
+}
+.btn-wide{
+  margin: 8px;
+  padding: 4px;
+  float: right;
+  width: 30%;
+  background-color: rgb(40, 44, 52, .83);
+  color: whitesmoke;
+  
+}
+
+
+@media (prefers-reduced-motion: no-preference) {
+  
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
